# RENDER_CDK

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md
.github/workflows/: audit.yaml  cargo-publish.yml  code-coverage.yml  commit-checks.yml  docker-publish.yml  ethicalcheck.yml  tests.yml
blueprint_output/: .gitkeep  README.md
blueprint_templates/: deploy_database.yaml  deploy_database_and_redis.yaml  deploy_database_redis_and_static.yaml  deploy_image.yaml  deploy_node env_vars.yaml  deploy_node.yaml  deploy_static.yaml  deploy_static_with_node.yaml  reference.yaml
cmake/: CMakeLists.txt
cpp/: CMakeLists.txt  README.md  main.cpp  test
cpp/src/: main.cpp  test
cpp/src/environment_management/: environment_manager.cpp
docker/: garage.Dockerfile  main.Dockerfile
docs/public/: index.html
docs/public/assets/css/: animations.css  main.css  variables.css
docs/web/public/: index.html
docs/web/public/assets/css/: main.css  variables.css
docs/web/public/assets/icons/: site.webmanifest
examples/cpp/list_all_services/: list_all_services.cpp
examples/list_all_services/: Cargo.toml
examples/list_all_services/src/: main.rs
examples/rust/: Cargo.toml
examples/rust/list_all_services/: Cargo.toml
examples/rust/src/: delete_service.rs  find_service_by_environment.rs  find_service_by_name_and_type.rs  find_service_by_region.rs  list_all_services.rs  list_services_with_status.rs
librender_cdk/: CMakeLists.txt  Doxyfile  README.md  demo  environment_management.cpp  environment_manager.cpp  environment_manager.h  lib.cpp  librender_cdk.cpp  main_executable  state_management.cpp  state_management.h  tests.cpp
librender_cdk/common/: common.h  constants.h  demo  temp.cpp
librender_cdk/librender_cdk/: environment_manager.cpp  lib.cpp  main.cpp
librender_cdk/src/: authorization.cpp  authorization.h  debug-build.cpp  environment_manager.cpp  environment_manager.h  main.cpp  service_manager.cpp  service_manager.h
librender_cdk/tests/: tests.cpp  unit_tests.cpp
llvm_ir/: .gitkeep
render_cdk/: Cargo.toml  README.md
render_cdk/samples/: sample.conf
render_cdk/src/: lib.rs  main.rs
render_cdk/src/authentication/: handler.rs  mod.rs  owner.rs  prelude.rs
render_cdk/src/environment_management/: environment_manager.rs  mod.rs  prelude.rs
render_cdk/src/iaas/: caching.rs  config.rs  db.rs  deploy.rs  mod.rs  redis.rs  storage.rs
render_cdk/src/iaas/blueprints/: generate.rs  mod.rs  paths.rs
render_cdk/src/iaas/models/: postgres.rs  redis.rs
render_cdk/src/logger/: info.rs  mod.rs  prelude.rs
render_cdk/src/resource_management/: mod.rs  prelude.rs
render_cdk/src/resource_management/models/: caching.rs  mod.rs  postgres.rs  prelude.rs  redis.rs  storage.rs  template.rs
render_cdk/src/resource_management/services/: service_manager.rs
render_cdk/src/state_management/: mod.rs  prelude.rs  state.rs
render_cdk/src/utils/: config.rs  mod.rs  random.rs  request_manager.rs  stringify.rs
rust/: Cargo.toml  README.md  definition.ebnf
rust/samples/: sample.conf
rust/src/: lib.rs  main.rs
rust/src/authentication/: mod.rs
rust/src/iaas/: config.rs  db.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs  prelude.rs
rust/src/iaas/blueprints/: generate.rs  mod.rs  paths.rs  prelude.rs
rust/src/iaas/samples/: postgres.conf  scratch.tf
rust/src/resource_management/: mod.rs  prelude.rs
rust/src/resource_management/models/: mod.rs  prelude.rs  static_site.rs
rust/src/resource_management/services/: mod.rs  service_manager.rs
rust/src/state/: state.rs
rust/src/state_management/: mod.rs  state.rs
scripts/: setup.sh
scripts/sql/: scripts.sql
src/: lib.rs  main.rs
src/environment_management/: environment_manager.rs  mod.rs
src/resource_management/services/: service_manager.rs
terraform/: main.tf  variables.tf
tests/: unit_tests.cpp
